--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./global.css">
   <title>Chat</title>
 </head>
-<body>
-  <h1>Hello, world!</h1>
+<body class="body">
+  <script src="./index.js"></script>
 </body>
 </html>
