Решить как будут выводиться итерации

--- a/static/pages/chat.html
+++ b/static/pages/chat.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Чат — Главная</title>
+  <title>Чат</title>
 </head>
 <body class="body">
-  <script src="../../src/pages/index/index.js"></script>
+  <script src="../../src/pages/chat/chat.js"></script>
 </body>
 </html>
