Решить кейс с итерациями в шаблоне

--- a/static/pages/chat.html
+++ b/static/pages/chat.html
@@ -8,6 +8,6 @@
   <title>Чат — Главная</title>
 </head>
 <body class="body">
-  <script src="../../src/pages/index/index.js"></script>
+  <script src="../../src/pages/ChatPage/ChatPage.ts"></script>
 </body>
 </html>
