--- a/static/pages/chat.html
+++ b/static/pages/chat.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="../favicon.png" />
-  <title>Чат — Главная</title>
+  <title>Чат</title>
 </head>
 <body class="body">
   <script src="../../src/pages/ChatPage/ChatPage.ts"></script>
