--- a/static/pages/password.html
+++ b/static/pages/password.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="static/favicon.png" />
-  <title>Чат — Регистрация</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+  <title>Чат — Смена пароля</title>
 </head>
 <body class="body">
-  <script src="../../temp/pages/password/password.js"></script>
+<script src="../../src/pages/PasswordPage/PasswordPage.ts"></script>
 </body>
 </html>
