--- a/static/pages/profile.html
+++ b/static/pages/profile.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="static/favicon.png" />
+  <link rel="icon" type="image/png" href="../favicon.png" />
   <title>Чат — Профиль</title>
 </head>
 <body class="body">
-  <script src="../../temp/pages/profile/profile.js"></script>
+<script src="../../src/pages/ProfilePage/ProfilePage.ts"></script>
 </body>
 </html>
