--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="../favicon.png" />
-  <title>Чат — Профиль</title>
+  <link rel="icon" type="image/png" href="./favicon.png" />
+  <title>Чат — Главная</title>
 </head>
 <body class="body">
-<script src="../../src/pages/ProfilePage/ProfilePage.ts"></script>
+  <div class="app"></div>
+  <script src="../src/index.ts"></script>
 </body>
 </html>
